--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/vue-fontawesome": "^3.0.0-3",
     "dexie": "^3.0.3",
+    "file-saver": "^2.0.5",
     "vue": "^3.0.5",
     "vue-router": "4"
   },
