--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@fortawesome/vue-fontawesome": "^3.0.0-3",
     "dexie": "^3.0.3",
     "file-saver": "^2.0.5",
+    "luxon": "^1.25.0",
     "vue": "^3.0.5",
     "vue-router": "4"
   },
