--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "@fortawesome/vue-fontawesome": "^3.0.0-3",
     "dexie": "^3.0.3",
     "file-saver": "^2.0.5",
+    "lodash": "^4.17.20",
     "luxon": "^1.25.0",
     "vue": "^3.0.5",
-    "vue-router": "4"
+    "vue-router": "4",
+    "vuex": "^4.0.0-rc.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss7-compat": "^2.0.2",
