--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/vue-fontawesome": "^3.0.0-3",
+    "better-podcast-parser": "^0.1.12",
     "dexie": "^3.0.3",
     "file-saver": "^2.0.5",
     "lodash": "^4.17.20",
     "luxon": "^1.25.0",
+    "uuid": "^8.3.2",
     "vue": "^3.0.5",
     "vue-router": "4",
     "vuex": "^4.0.0-rc.2"
