--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@vue/compiler-sfc": "^3.0.5",
     "autoprefixer": "^9",
     "postcss": "^7",
+    "postcss-input-range": "^4.0.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "vite": "^2.0.0-beta.12"
   }
