--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "file-saver": "^2.0.5",
     "lodash": "^4.17.20",
     "luxon": "^1.25.0",
+    "sortablejs": "^1.13.0",
     "uuid": "^8.3.2",
     "vue": "^3.0.5",
     "vue-router": "4",
