use npx for vite

--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "podrain-vue",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build"
+    "dev": "npx vite",
+    "build": "NODE_ENV=production npx vite build"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
