--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "postcss": "^7",
     "postcss-input-range": "^4.0.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
-    "vite": "^2.0.0-beta.12"
+    "vite": "^2.0.0-beta.12",
+    "vite-plugin-pwa": "^0.3.8"
   }
 }
