--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/vue-fontawesome": "^3.0.0-3",
+    "@oruga-ui/oruga-next": "^0.3.6",
     "axios": "^0.21.1",
     "better-podcast-parser": "^0.1.12",
     "dexie": "^3.0.3",
