highlight current page in menu

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "vuex": "^4.0.0-rc.2"
   },
   "devDependencies": {
-    "@tailwindcss/postcss7-compat": "^2.0.2",
+    "@tailwindcss/postcss7-compat": "npm:@tailwindcss/postcss7-compat",
     "@tailwindcss/typography": "^0.3.1",
     "@vitejs/plugin-vue": "^1.0.4",
     "@vue/compiler-sfc": "^3.0.5",
