--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "localforage": "^1.9.0",
     "lodash": "^4.17.20",
     "luxon": "^2.0.2",
+    "pinia": "^2.0.9",
     "sortablejs": "^1.13.0",
     "uuid": "^8.3.2",
     "vue": "^3.0.5",
