--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     
-    - uses: pnpm/action-setup@2.2.2
+    - uses: pnpm/action-setup@v2.2.2
       name: Install and run pnpm
       id: pnpm-install
       with:
