--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/vue-fontawesome": "^3.0.0-3",
-    "@oruga-ui/oruga-next": "^0.4.4",
+    "@oruga-ui/oruga-next": "^0.7.0",
     "axios": "^0.21.1",
     "better-podcast-parser": "^0.2.0",
     "dexie": "^3.0.3",
@@ -20,19 +20,18 @@
     "pinia": "^2.0.22",
     "sortablejs": "^1.13.0",
     "uuid": "^8.3.2",
-    "vue": "^3.0.5",
-    "vue-router": "4"
+    "vue": "^3.3.7",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
-    "@tailwindcss/postcss7-compat": "npm:@tailwindcss/postcss7-compat",
     "@tailwindcss/typography": "^0.5.7",
-    "@vitejs/plugin-vue": "^1.10.2",
+    "@vitejs/plugin-vue": "^4.4.0",
     "@vue/compiler-sfc": "^3.0.5",
     "autoprefixer": "^10.4.12",
     "postcss": "^8.4.16",
     "postcss-input-range": "^4.0.0",
     "tailwindcss": "^3.1.8",
-    "vite": "^3.1.2",
-    "vite-plugin-pwa": "^0.3.8"
+    "vite": "^4.5.0",
+    "vite-plugin-pwa": "^0.16.6"
   }
 }
